--- a/gui/landing/_sass/_vars.scss
+++ b/gui/landing/_sass/_vars.scss
@@ -9,6 +9,7 @@ $color-style-red: #ff646d;
 $color-style-white: #fff;
 $color-style-black: #0b0f14;
 $color-text-light: #6b7a8a;
+$color-text-ultralight: #8d9eb0;
 
 $color-bg-100: #181d23;
 $color-bg-90: #1e242c;
