--- a/gui/landing/_sass/_layout.scss
+++ b/gui/landing/_sass/_layout.scss
@@ -30,25 +30,27 @@
 
   &__body {
     flex: 1 0 auto;
-    display: flex;
-    flex-flow: column;
-    align-items: stretch;
-    gap: 108px;
     width: 100%;
-
-    @media (max-width: 768px) {
-      gap: 60px;
-    }
   }
 
   &__content {
-    padding: 0 var(--page-side-padding, 16px);
-    max-width: 1440px;
-    margin: 0 auto;
     width: 100%;
+    display: grid;
+
+    grid-template-columns:
+      [fullwidth-start] minmax(16px, 1fr) [content-start] min(
+        100% - 32px,
+        1440px
+      )
+      [content-end] minmax(16px, 1fr) [fullwidth-end];
+    background: #181d23;
 
     &:empty {
       display: none;
+    }
+
+    & > * {
+      grid-column: content;
     }
   }
 
