--- a/gui/landing/_sass/styles.scss
+++ b/gui/landing/_sass/styles.scss
@@ -6,6 +6,10 @@
 @import "footer";
 @import "actions";
 @import "banner";
+@import "section";
+@import "adopters";
+@import "network";
+@import "vision";
 @import "cta";
 @import "instruments";
 @import "features";
