--- a/gui/landing/_sass/_banner.scss
+++ b/gui/landing/_sass/_banner.scss
@@ -6,6 +6,7 @@
   text-align: center;
   padding: 0 var(--page-side-padding, 16px);
   width: 100%;
+  margin: 0 0 80px;
 
   &__header {
     display: flex;
