--- a/gui/landing/_sass/_partners.scss
+++ b/gui/landing/_sass/_partners.scss
@@ -6,7 +6,7 @@
   padding: 0 var(--page-side-padding, 16px);
   width: 100%;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 80px auto 0;
 
   @media (max-width: 640px) {
     gap: 64px;
