fixes for content

--- a/gui/landing/_includes/adopters.html
+++ b/gui/landing/_includes/adopters.html
@@ -1,6 +1,6 @@
 <section class="section section--adopters">
   <div class="section__header">
-    <h2 class="section__title">GURU Network Early Adopters</h2>
+    <h2 class="section__title">Early Adopters</h2>
     <span class="section__subtitle"
       >Early adopters projects who opted in to use of Dex Guru Warehouse and
       later GURU FlowOrchestrator as a Framework for their services launch.
