--- a/gui/landing/_includes/network.html
+++ b/gui/landing/_includes/network.html
@@ -1,7 +1,7 @@
 <section class="section section--network">
   <div class="section__header">
     <h2 class="section__title">
-      <span class="section__pretitle">GURU Network: </span>
+      <span class="section__pretitle">GURU Network</span>
       AI Processor as a Service
     </h2>
   </div>
