--- a/gui/landing/_includes/head.html
+++ b/gui/landing/_includes/head.html
@@ -3,26 +3,28 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" |
-  relative_url }}?v={{ build_version }}"> {%- feed_meta -%} {%- if
-  jekyll.environment == 'production' and site.google_analytics -%} {%- include
-  google-analytics.html -%} {%- endif -%} {%- include custom-head.html -%}
+  {%- seo -%} 
+  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}?v={{ build_version }}"> 
+  {%- feed_meta -%} 
 
-  <!-- <meta property="og:url" content="https://gurunetwork.ai/" /> -->
-  <meta
-    property="og:image"
-    content="{{ site.url }}/assets/img/ogp.png"
-  />
+  {%- if jekyll.environment == 'production' and site.google_analytics -%} 
+    {%- include google-analytics.html -%} 
+  {%- endif -%} 
+
+  {%- include custom-head.html -%}
+
+  <meta property="og:image" content="https://gurunetwork.ai/assets/img/ogp.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       var canonicalLink = document.querySelector("link[rel='canonical']");
       var ogUrlMeta = document.querySelector("meta[property='og:url']");
-
+      
       var currentUrl = window.location.href;
 
       if (canonicalLink) {
